# xdp-firewall

./: Cargo.toml  README.md  backup.txt
myapp/: Cargo.toml  README.md  build.rs
myapp-ebpf/: Cargo.toml  build.rs
myapp-ebpf/src/: main.rs  throttle.rs
myapp/myapp/: build.rs
myapp/myapp-common/: Cargo.toml
myapp/myapp-ebpf/src/: main.rs
myapp/myapp/src/: main.rs
myapp/src/: main.rs  throttle.rs
myapp/static/: block.html  blocklist.html  index.html  script.js  style.css  unblock.html
xdp-firewall-aya/: Cargo.toml  build.rs
xdp-firewall-aya-common/: Cargo.toml
xdp-firewall-aya-ebpf/: Cargo.toml  bpfel-unknown-none.json
xdp-firewall-aya-ebpf/src/: main.rs
xdp-firewall-aya/src/: main.rs
