[package]
name = "xdp-firewall-aya-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
xdp-firewall-aya-common = { path = "../xdp-firewall-aya-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-firewall-aya"
path = "src/main.rs"
