[package]
name = "xdp-firewall-aya-ebpf"
version = "0.1.0"
edition.workspace = true


[dependencies]
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }


[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-firewall-aya-ebpf"
path = "src/main.rs"

[profile.release]
panic = "abort"
